constraints/k8s-ingress-whitelist-constraints-2.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sIngressWhitelist
metadata:
  name: k8s-ingress-whitelist
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Ingress"]
